--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Bebas Neue', cursive;
     background-color: #ededed;
+    font-size: x-large;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 10px 35px;
+    background-image: url(20220529_194425.jpg);
+    color: #ededed;
 }
 
 .navbar div {
@@ -18,4 +23,13 @@ body {
 .navbar div.word p:hover {
     color: bisque;
     cursor: pointer;
+}
+
+.reBar {
+    text-align: center;
+
+    padding: 0 35px;
+    background-image: url(20220529_194425.jpg);
+    color: #ededed;
+
 }
